--- a/paulhub/templates/pages/mothsoc4.html
+++ b/paulhub/templates/pages/mothsoc4.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <style>
   h1.nav-header {
     font-size: calc(24px + .5vw);
@@ -13,7 +14,43 @@
 <br>
 <div class="solo-text">
   <p class="not-selectable" style="text-align: justify; line-height: 1.3;">
-    This is under construction.
+    The haunted spectre once said: <i>&raquo;THE GOVERNMENT IS REAL!!!&laquo;</i> That's really unfortunate. It also once said:
+    <i>&raquo;I NEED HELP!!!!&laquo;</i> That's not as unfortunate, but also not ideal. Talking about idealism, left comes before right.
+    All countries implementing this differently suck.
+    <br><br><br>
+    Remember Joe? Joe snake. It has a mommy. Two to be precise. Snakes are fun. Especially when they hunt apples. However, Joe's mommies
+    were different. They died before Joe's origin. He was born in a laboratory. Level 11. The wizard felt like Joe's dad. What a nice
+    human. Shortly after that he created the dragon rider. The communistic community hated him. Kicking is still meta. Did you know
+    that S2DnG is a very communistic game? There is no money, just tools and workers. If you want to find out more, do it. Otherwise,
+    read <a href="https://github.com/NotYou404/ts2-anniversary-guide">my guide</a>.
+    <br><br><br>
+    Don't be like John. He's very schizophrenic. Schizophrenia is his religion. Just like Günter. He likes hiding in dark cover
+    because he has no ears. They got stolen by the lootgoblins. Those live with Satan. Just like John's uncle. He pooped while
+    eating and got fisted.
+    <br><br><br>
+    Do you know these days when you wake up and wish you didn't? I have trustworthy sources proofing this to be normal, easily
+    curable using hydrocyanic acid. <i>&raquo;When the voices get loud, I'm turning them down&laquo;</i> someone once said.
+    That indeed works, using the technique described above. On the other hand, honey tastes good. Getting back to communistic
+    thoughts. I can barely grasp them due to the vast amount of cake. Everything I can hear is the scream of a worker who is
+    working. His boss is a rich capitalist who never works. Sounds fair, doesn't it? I can feel that the kicking meta might
+    come to an end very soon. All you need for hydrocyanic acid is hydrogen, carbon and nitrogen. Chemistry outplayed. Did you know
+    that te Christians killed way more people than the Satanists? Not sharing their opinions really is a war crime. Pastafarians in
+    contrary are fine with the knowledge, other religions are mislead. No violence, no harassment and no threats. At the same time,
+    the fog starts running, making the vision clearer. It sees colors. Squares, triangles and irregularly shaped ellipsoids. Who
+    <i>&raquo;it&laquo;</i> is? No idea. Maybe it (the haunted spectre) knows. It won't tell us though. It's not real. Even though I
+    cannot tell wether I am real. Fact is: Suckers suck.
+    <br><br><br>
+    Delta is a difference. The symbol of delta as difference is a triangle Δ, just like Illuminati. That means, both math and
+    people writing out <i>&raquo;jgl diff&laquo;</i> believe into the best of the best. Earth is a flat pyramid. By the way, the FSM looks
+    truly amazing on top of a pyramid. Conspiracies are cool. I kinda miss February.
+    <br><br><br>
+    Being high is cool overall. However you should use your potential energy to jump down, gaining kinetic energy to hit the ground faster
+    and harder. Did you know that the formula for thermic energy is \( m * c * ΔT \)? <i><i>&raquo;MORE ILLUMINATI!!!&laquo;</i></i>.
+    Definitely a proof of their existence. THEY manage our climate, according to the formula. \( T \) means tomb. That's were capitalists
+    are gonna land. \( m \) is the magnifier. Earth is a pyramid, meaning the poles are fake. \( c \) is cucumber tastiness. They're not.
+    That being said, our formula \( m * c * ΔT \) equals Δ. Do you need any other proof? Physics outplayed.
+    <br><br><br>
+    ...
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
