proceeded with mothsoc4.html

--- a/paulhub/templates/pages/mothsoc4.html
+++ b/paulhub/templates/pages/mothsoc4.html
@@ -45,12 +45,25 @@
     truly amazing on top of a pyramid. Conspiracies are cool. I kinda miss February.
     <br><br><br>
     Being high is cool overall. However you should use your potential energy to jump down, gaining kinetic energy to hit the ground faster
-    and harder. Did you know that the formula for thermic energy is \( m * c * ΔT \)? <i><i>&raquo;MORE ILLUMINATI!!!&laquo;</i></i>.
+    and harder. Did you know that the formula for thermic energy is \( m * c * ΔT \)? <i>&raquo;MORE ILLUMINATI!!!&laquo;</i>.
     Definitely a proof of their existence. THEY manage our climate, according to the formula. \( T \) means tomb. That's were capitalists
     are gonna land. \( m \) is the magnifier. Earth is a pyramid, meaning the poles are fake. \( c \) is cucumber tastiness. They're not.
     That being said, our formula \( m * c * ΔT \) equals Δ. Do you need any other proof? Physics outplayed.
     <br><br><br>
-    ...
+    Noodles are better than rice and potatoes. But there's more: I also have a reason for this. Rice usually grows in socialistic
+    and even capitalistic countries who pretend to be communistic. Potatoes originally come from those areas exporting cocain.
+    However, they only make me feel a bit high. Noodle on the other hand grow on trees. Biology outplayed.
+    <br><br><br>
+    It feels like I'm missing one more thing. Even if, it doesn't matter. By the way, if I ever stop writing this, it's probably due to
+    the kinetic energy.
+    <br><br><br>
+    Have you ever used a computer before? Probably not, since you are reading this. But if you did, you likely heard of programmers. Pah!
+    Do you actually think computer science is real? If it was, why would they name a language after a LETTER?? Also, computers were
+    designed to do MATHS, not to be programmed. If you want to print() something, use a freaking PEN! Sorry, no curse words. Do you want
+    to tell me that <i>&raquo;code checks if a metadata is empty using loadash isEmpty but this particular file has resources = [{}] which
+    doesn't pass the check&laquo;</i> isn't a NONSENSICAL STATEMENT??? Having funny colored letters inside a black window? WITCHES!!! Who
+    even wants to deal with COMPILATION ERRORS?! Why would I want an IMAGE of something useful? If computer science was real, why did nobody
+    ever do something like this: while(True): print(money);? Computer science outplayed, stop fooling us.
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
