Finished mothsoc4, started 5

--- a/paulhub/templates/pages/mothsoc4.html
+++ b/paulhub/templates/pages/mothsoc4.html
@@ -64,6 +64,26 @@
     doesn't pass the check&laquo;</i> isn't a NONSENSICAL STATEMENT??? Having funny colored letters inside a black window? WITCHES!!! Who
     even wants to deal with COMPILATION ERRORS?! Why would I want an IMAGE of something useful? If computer science was real, why did nobody
     ever do something like this: while(True): print(money);? Computer science outplayed, stop fooling us.
+    <br><br><br>
+    But why is all this? Well, it's because creationism beats it all. Our holy pasta goddess did everything by <s>hand</s> appendage.
+    Every supposed proof has been laid out by HIM one by one. Darwinism is fake. Alchemy is cool. I really like the base elements dirt,
+    water, fire, air and ghost. Talking about ghosts, the haunted spectre isn't one. It's a haunted spectre.
+    <br><br><br>
+    <i>&raquo;THE RIOT IS REAL!&laquo;</i> the haunted spectre once whispered. It was the 25. October 1917. It said the exact same thing
+    3 more times: 1933 and 2024. Two of those were really good things. Trust me bro.
+    <br><br><br>
+    We haven't talked a lot about the haunted spectre lately. Did you know that the cake is a lie? We don't need cows, bread is enough.
+    And noodles. Just let your thoughts float. Is there any way to craft bread out of an infinite water source?
+    Why would multiple colors merge to white (racism)? Prisma ideology... Is wearing a hat actually healthy?Can cells even wear one?
+    Why do people say <b>O</b>h <b>M</b>y <b>G</b>as-chamber so regularly??Are workers even real? Is a visual indent good? Or is that just
+    north-taiwanese propaganda?Is Taiwan even real? Where did my cheese go? Why is it gone?I NEED MY CHEESE BACK!!! WHY IS IT
+    <span style="overflow-wrap: break-word;">G{{ "O" * 30 }}o{{ "O" * 91}}NE</span>.
+    <br>
+    I need help. Somebody find my cheese.
+    <br>
+    PWEASE!
+    <br><br>
+    This was the prolog.
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
