--- a/paulhub/templates/pages/mothsoc5.html
+++ b/paulhub/templates/pages/mothsoc5.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <style>
   h1.nav-header {
     font-size: calc(24px + .5vw);
+  }
+  section ul li { 
+    display: list-item;
+  }
+  li {
+    list-style-type: disc;
   }
 </style>
 <p class="note">
@@ -13,7 +20,95 @@
 <br>
 <div class="solo-text">
   <p class="not-selectable" style="text-align: justify; line-height: 1.3;">
-    This is under construction.
+    I want to thank everybody who helped me writing this:
+    <ul>
+      <li>The FSM for creating me (I'm still mad)</li>
+      <li>The haunted spectre for being so supportive</li>
+      <li>Friedrich Engels for being</li>
+      <li>My Stardew Valley cat for giving me inspiration</li>
+      <li>My knife</li>
+      <li>Rat for sending fun pics</li>
+      <li>Riot Games for gifting me depressions</li>
+      <li>Snakes for eating apples</li>
+      <li>Science for being fake</li>
+      <li>Muesli for tasting good</li>
+      <li>Glue for smelling good</li>
+      <li>My hand for holding a pen</li>
+      <li>Christiane F. for being built diff.</li>
+      <li>Capitalism for being shit</li>
+      <li>Triangles for being real</li>
+      <li>SV OST for giving me inspiration</li>
+      <li>Respawn for giving me bad mates</li>
+      <li>Günter for his name</li>
+      <li>Bobby for writing good books</li>
+      <li>Josef Stalin for defeating socialism</li>
+      <li>Mao for making adorable music</li>
+      <li>Aseprite for being free</li>
+      <li>Microsoft for making bad software</li>
+      <li>My window for working</li>
+      <li>Math for being vulnerable</li>
+      <li>Bridges for making me feel high</li>
+      <li>Bridges for being a place to live</li>
+      <li>Acrylic paints for smelling</li>
+      <li>My keyboard for existing</li>
+      <li>My mouse for being useless</li>
+      <li>My monitor for showing me colors</li>
+      <li>My processor for being average</li>
+      <li>Delta for living in a world</li>
+      <li>Jake for causing epilepsy</li>
+      <li>Blaze Queen for being lazy like me</li>
+      <li>Dwarf Trio for being lazy like me</li>
+      <li>Mean Illuminati for being average in size</li>
+      <li>The haunted spectre for looking like an ape</li>
+      <li>Google for providing an amazing search engine</li>
+      <li>The Duolingo Owl for coming to my house</li>
+      <li>The american eagle of freedom for staring at me</li>
+      <li>Pauls voices for being \( y = 9^x \)</li>
+      <li>Elon Musk for censoring racism</li>
+      <li>Google for also censoring all the potential competition</li>
+      <li>DuckDuckGo for censoring Google</li>
+      <li>Ecosia for planting noodles</li>
+      <li>Glue for smelling good</li>
+      <li>Firefox for being a furry</li>
+      <li>DuckDuckGo for being a furry</li>
+      <li>Linux for being a furry</li>
+      <li>My sixth Apex main for having a furry</li>
+      <li>My mouse for still being useless</li>
+      <li>Git for not giving me errors</li>
+      <li>Furrys for being furry</li>
+      <li>My brain for not having cancer</li>
+      <li>Drugs for being evil</li>
+      <li>Polish for being an amazing language</li>
+      <li>June</li>
+      <li>The BSoD for being so pretty</li>
+      <li>Glue for smelling good</li>
+      <li>Vantage for being fat</li>
+      <li>Undertale for being under a tale</li>
+      <li>Soul Knight for letting me do genocides</li>
+      <li>Mojang for being a small indie company</li>
+      <li>XFCE for glitching around</li>
+      <li>The cake for being a lie</li>
+      <li>Jenna Fox for being a fox</li>
+      <li>Christian L. for being high</li>
+      <li>abbvie for hurting furrys</li>
+      <li>North Korea for being a great tourist destination</li>
+      <li>My Passwords for being A[i4=*L_3^Qw</li>
+      <li>Citrus Mix TicTacs for looking funny</li>
+      <li>Tensors for having 6 colors</li>
+      <li>Toby Fox for copying me</li>
+      <li>Ovid for being so cool</li>
+      <li>Water for being clean</li>
+      <li>Money for being overrated</li>
+      <li>The Tux for being infinitely cute</li>
+      <li>Australia for being fake</li>
+      <li>Glue for smelling good</li>
+    </ul>
+    <br>
+    Enough thanksgiving, holy crab. Just kidding, the FSM is the only holy thing. However, crabs are highly underrated.
+    They might not be sneks and they might not be cats, but they're cute. Especially when oxidizing. Anyways, before taking
+    over maths, there is one more thing to do.
+    <br><br><br>
+    Poland jokes following.
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
