Wrote Chapter 1 of the manifest, started chapter 2

--- a/paulhub/templates/pages/mothsoc5.html
+++ b/paulhub/templates/pages/mothsoc5.html
@@ -107,8 +107,25 @@
     Enough thanksgiving, holy crab. Just kidding, the FSM is the only holy thing. However, crabs are highly underrated.
     They might not be sneks and they might not be cats, but they're cute. Especially when oxidizing. Anyways, before taking
     over maths, there is one more thing to do.
+    <br><br><br><br>
+    <h3>Chapter 1</h3>
+    A monopoly is when one person learns polish on Duolingo. However, that's impossible, as Duo is always suffering too! This
+    makes it a Duopoly, economy outplayed.
+    <br><br><br><br>
+    <h3>Chapter 2</h3>
+    It all started with the FSM. IT created the voices. The wall. The bridge. In that sense, I can't say IT didn't give me a
+    chance to put my potential energy into use. Birds were also HIS creations, until they got replaces with drones by the US
+    government. Another glorious creation of HIS noodly noodleness is the haunted spectre. The haunted spectre of communism.
+    I believe this is a good time to thank the sponsor of this thing: The haunted spectre GmbH & Co. KG.
     <br><br><br>
-    Poland jokes following.
+    Once in history there was a very intelligent man: Alice Weidel. However, Friedrich Engels is also cool. I say is, because
+    his soul is <a href="https://yt.cdaut.de/watch?v=Y6ljFaKRTrI&quality=hd720&dark_mode=true">still alive</a>. Did you know,
+    that Friedrich Engels was a communist? I know, it's hard to believe because he worked together with Karl Marx, the bozo
+    who said there can't be religion in communism. What a fascist. I'm still not over that. Just to make it clear, the FSM
+    is clearly pro-Friedrich. Unlike Mao, Friedrich did not finish with a K/D of greater than 0. By the way, 0 is a cool number.
+    It looks like a fried noodle, that is bound to Ash's hand, influenced by Illuminati's gravity and Pauls infinite mass. On its
+    top, there is a small tip of self-made mayonnaise, mixed with pure vanilla. If it only was cooked in an averagely hot oven and
+    tested for quality in that level 14 laboratory. It would be lovely. You know what else is lovely? Noodles.
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
