--- a/paulhub/templates/pages/mothsoc5.html
+++ b/paulhub/templates/pages/mothsoc5.html
@@ -126,6 +126,16 @@
     It looks like a fried noodle, that is bound to Ash's hand, influenced by Illuminati's gravity and Pauls infinite mass. On its
     top, there is a small tip of self-made mayonnaise, mixed with pure vanilla. If it only was cooked in an averagely hot oven and
     tested for quality in that level 14 laboratory. It would be lovely. You know what else is lovely? Noodles.
+    <br><br><br>
+    Thank you Doodley for letting me water you every day. You are for sure a creation of the FSM is collaboration with the haunted
+    spectre. Stardew Valley is a very communistic game overall. You can produce everything by yourself and also can't force others
+    to work for you. Except for your spouse and the Junimos. The latter are little furrys without fur. With lots of cheese in the
+    basement. The haunted spectre would be proud of ape. Apes are fun. If they jump, they are still apes, opposed to Paul. They
+    were surely created in a level 5 laboratory. Although I wanted to talk about my cat. Honey really tastes good. Like a very
+    <i>high</i> concentration of noodle soup in a bottle made of the ultimate material that could ever be forged by the dwarfs
+    of the volcano caldera: The UHU glue. Did I already mention that the beer volcano can produce anything you want, including
+    honey? I don't think cats can swim in honey though, which sad and fortunate at the same time. Why that is? Because honey
+    tastes better than cats. I'm speaking of experience.
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
