Fixed mypy errors

--- a/paulhub/templates/pages/mothsoc5.html
+++ b/paulhub/templates/pages/mothsoc5.html
@@ -127,7 +127,7 @@
     top, there is a small tip of self-made mayonnaise, mixed with pure vanilla. If it only was cooked in an averagely hot oven and
     tested for quality in that level 14 laboratory. It would be lovely. You know what else is lovely? Noodles.
     <br><br><br>
-    Thank you Doodley for letting me water you every day. You are for sure a creation of the FSM is collaboration with the haunted
+    Thank you Doodley for letting me water you every day. You are for sure a creation of the FSM in collaboration with the haunted
     spectre. Stardew Valley is a very communistic game overall. You can produce everything by yourself and also can't force others
     to work for you. Except for your spouse and the Junimos. The latter are little furrys without fur. With lots of cheese in the
     basement. The haunted spectre would be proud of ape. Apes are fun. If they jump, they are still apes, opposed to Paul. They
