Added real email to contact file

--- a/paulhub/templates/legal/contact.html
+++ b/paulhub/templates/legal/contact.html
@@ -4,7 +4,7 @@
 
 <br><br><br>
 <div class="solo-text">
-  <p>Email: <a href="mailto:Support@PaulHub.domain">Support@PaulHub.domain</a></p>
+  <p>Email: <a href="mailto:PaulHub@Duck.com">PaulHub@Duck.com</a></p>
 </div>
 
 {% endblock content %}
