--- a/paulhub/templates/pages/google_user_parody.html
+++ b/paulhub/templates/pages/google_user_parody.html
@@ -73,7 +73,7 @@
   <strong>Note: </strong>There may be multiple people with the same name
 </p>
 <br>
-<div class="solo-text">
+<div class="solo-text" style="white-space: nowrap;">
   <p>
     <div class="popup-div" onmouseenter="togglePopup('popup0')" onmouseleave="togglePopup('popup0')">
         • &nbsp;&nbsp;<q>So we can play on one server locally</q>
